Add parking slot list

--- a/MyApplication6/app/src/main/res/values/strings.xml
+++ b/MyApplication6/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
         completions."
     </string>
     <string name="title_activity_sign_up">SignUp</string>
+    <string name="title_activity_parkingground">parkingground</string>
+    <string name="title_activity_parkingslots">Parkingslots</string>
+    <string name="title_activity_prakingground">Prakingground</string>
 </resources>
